visibility fix

--- a/src/components/ResponsiveAnimationSection/VerticalAnimationSection.module.css
+++ b/src/components/ResponsiveAnimationSection/VerticalAnimationSection.module.css
@@ -14,7 +14,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 400vh;
+  height: 500vh;
   overflow: hidden;
 }
 
